alignment fixed by sridharan @ shameem repo...

--- a/src/app/dashboard/body/log-table/log-table.component.css
+++ b/src/app/dashboard/body/log-table/log-table.component.css
@@ -1,11 +1,12 @@
-.card-title{
+.card-title {
     text-align: center;
     font-size: 14px;
     margin-top: 18px;
     font-family: sans-serif;
 }
-.card{
-  /* width: 100%;
+
+.card {
+    /* width: 100%;
   background-color: #fff;
   border-radius: 15px;
   border: none;
@@ -16,36 +17,49 @@
   text-align: center;
   display: flex;
   flex-wrap: wrap; */
-  /* margin-left: -24%; */
-  /* height: 325px;
+    /* margin-left: -24%; */
+    /* height: 325px;
   left: -84px; */
-
-  /* box-shadow: 0 0.46875rem 2.1875rem rgb(90 97 105 / 10%), 0 0.9375rem 1.40625rem rgb(90 97 105 / 10%), 0 0.25rem 0.53125rem rgb(90 97 105 / 12%), 0 0.125rem 0.1875rem rgb(90 97 105 / 10%);
+    /* box-shadow: 0 0.46875rem 2.1875rem rgb(90 97 105 / 10%), 0 0.9375rem 1.40625rem rgb(90 97 105 / 10%), 0 0.25rem 0.53125rem rgb(90 97 105 / 12%), 0 0.125rem 0.1875rem rgb(90 97 105 / 10%);
   padding: 16px;
   text-align: center;
   background-color: white; */
-  /* margin-left: 101%; */
-  /* width: 255px;
+    /* margin-left: 101%; */
+    /* width: 255px;
   margin-top: -7px;
   border-radius: 23px;
   height: 387px;
   transform: translate(261px, 2px); */
+    box-shadow: 0 0.46875rem 2.1875rem rgb(90 97 105 / 10%), 0 0.9375rem 1.40625rem rgb(90 97 105 / 10%), 0 0.25rem 0.53125rem rgb(90 97 105 / 12%), 0 0.125rem 0.1875rem rgb(90 97 105 / 10%);
+    padding: 16px;
+    text-align: center;
+    background-color: white;
+    width: 332px;
+    /* margin-top: -7px; */
+    border-radius: 23px;
+    height: 327px;
+    transform: translate(-17%, -7px);
+}
 
-  box-shadow: 0 0.46875rem 2.1875rem rgb(90 97 105 / 10%), 0 0.9375rem 1.40625rem rgb(90 97 105 / 10%), 0 0.25rem 0.53125rem rgb(90 97 105 / 12%), 0 0.125rem 0.1875rem rgb(90 97 105 / 10%);
-  padding: 16px;
-  text-align: center;
-  background-color: white;
-  width: 332px;
-  /* margin-top: -7px; */
-  border-radius: 23px;
-  height: 327px;
-  transform: translate(-17%, -7px);
+.dashboard-logs {
+    text-align: -webkit-left;
+}
+
+.box {
+    width: 90%;
+    position: relative;
+    box-shadow: 0 0.46875rem 2.1875rem rgb(90 97 105 / 10%), 0 0.9375rem 1.40625rem rgb(90 97 105 / 10%), 0 0.25rem 0.53125rem rgb(90 97 105 / 12%), 0 0.125rem 0.1875rem rgb(90 97 105 / 10%);
+    padding: 11px;
+    margin-bottom: 30px;
+    /* text-align: center; */
+    background-color: white;
+    border-radius: 23px;
+    height: 325px;
+    top: -5px;
+    margin-left: 49px;
 }
 
 
-.dashboard-logs{
-text-align: -webkit-left;
-}
 /* .card {
     width: 100%;
     background-color: #fff;
@@ -60,21 +74,9 @@ text-align: -webkit-left;
 } */
 
 
-
-
-
-
-
-
-
-
-
-
-
- /* current  
+/* current  
  margin-right: 3px;
  margin-left: -22%;*/
-
 
 
 /* old code 
