--- a/src/app/dashboard/body/piechart/piechart.component.css
+++ b/src/app/dashboard/body/piechart/piechart.component.css
@@ -3,10 +3,10 @@
     margin: 35px auto;
     padding: 0;
     /* max-height: 500px; */
-  }
-  
-  .card{
-    width: 127%;
+}
+
+.card {
+    width: 100%;
     background-color: #fff;
     border-radius: 19px;
     border: none;
@@ -19,11 +19,8 @@
     flex-wrap: wrap;
     margin-left: 50px;
     height: 325px;
-  }
+}
 
-  p {
+p {
     font-family: Lato;
-  }
-
-  
-
+}
